[gd_scene load_steps=54 format=2]

[ext_resource path="res://sprites/scene/monitor.png" type="Texture" id=1]
[ext_resource path="res://sprites/scene/backgrounds/book.png" type="Texture" id=2]
[ext_resource path="res://sprites/scene/backgrounds/gear.png" type="Texture" id=3]
[ext_resource path="res://sprites/scene/backgrounds/radiation.png" type="Texture" id=4]
[ext_resource path="res://sprites/scene/backgrounds/background.png" type="Texture" id=5]
[ext_resource path="res://sprites/scene/backgrounds/question.png" type="Texture" id=6]
[ext_resource path="res://sprites/scene/backgrounds/list.png" type="Texture" id=7]
[ext_resource path="res://scripts/computer.gd" type="Script" id=8]
[ext_resource path="res://sprites/scene/backgrounds/notify.png" type="Texture" id=9]
[ext_resource path="res://sprites/scene/backgrounds/off.png" type="Texture" id=10]
[ext_resource path="res://sprites/scene/backgrounds/on.png" type="Texture" id=11]
[ext_resource path="res://sprites/scene/backgrounds/on_off/1.png" type="Texture" id=12]
[ext_resource path="res://sprites/scene/backgrounds/on_off/2.png" type="Texture" id=13]
[ext_resource path="res://sprites/scene/backgrounds/on_off/3.png" type="Texture" id=14]
[ext_resource path="res://sprites/scene/Microsoft_Windows_Blue_Screen_of_Death_humor_simple_background_computer-229219.png" type="Texture" id=15]
[ext_resource path="res://sprites/scene/backgrounds/on_off/5.png" type="Texture" id=16]
[ext_resource path="res://sprites/scene/backgrounds/on_off/4.png" type="Texture" id=17]
[ext_resource path="res://sprites/scene/backgrounds/on_off/12.png" type="Texture" id=18]
[ext_resource path="res://sprites/scene/backgrounds/on_off/13.png" type="Texture" id=19]
[ext_resource path="res://sprites/scene/backgrounds/on_off/11.png" type="Texture" id=20]
[ext_resource path="res://sprites/scene/backgrounds/on_off/14.png" type="Texture" id=21]
[ext_resource path="res://sprites/scene/backgrounds/sh_crt3.png" type="Texture" id=22]
[ext_resource path="res://sprites/scene/backgrounds/sh_crt2.png" type="Texture" id=23]
[ext_resource path="res://sprites/scene/backgrounds/sh_crt.png" type="Texture" id=24]
[ext_resource path="res://sprites/scene/backgrounds/grayblock.png" type="Texture" id=25]
[ext_resource path="res://sprites/scene/shop/Без имени-2.png" type="Texture" id=26]
[ext_resource path="res://sprites/scene/shop/test_ssd.png" type="Texture" id=27]
[ext_resource path="res://sprites/scene/shop/test_ssd_black.png" type="Texture" id=28]
[ext_resource path="res://sprites/scene/shop/ethernet.png" type="Texture" id=29]
[ext_resource path="res://sprites/scene/shop/ethernet_black.png" type="Texture" id=30]
[ext_resource path="res://sprites/scene/shop/ethernet_gray.png" type="Texture" id=31]
[ext_resource path="res://sprites/scene/shop/test_ssd_gray.png" type="Texture" id=32]
[ext_resource path="res://sprites/scene/shop/cpu_black.png" type="Texture" id=33]
[ext_resource path="res://sprites/scene/shop/cpu.png" type="Texture" id=34]
[ext_resource path="res://sprites/scene/shop/cpu_gray.png" type="Texture" id=35]
[ext_resource path="res://sprites/scene/shop/antivirus.png" type="Texture" id=36]
[ext_resource path="res://sprites/scene/shop/antivirus_gray.png" type="Texture" id=37]
[ext_resource path="res://sprites/scene/shop/antivirus_black.png" type="Texture" id=38]
[ext_resource path="res://sprites/scene/shop/reader_black.png" type="Texture" id=39]
[ext_resource path="res://sprites/scene/shop/reader_gray.png" type="Texture" id=40]
[ext_resource path="res://sprites/scene/shop/reader.png" type="Texture" id=41]
[ext_resource path="res://texts/generalFont.tres" type="DynamicFont" id=42]
[ext_resource path="res://texts/statsFont.tres" type="DynamicFont" id=43]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 21 ) ],
"loop": true,
"name": "New Anim",
"speed": 4.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 32 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 34 ), ExtResource( 33 ), ExtResource( 35 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 36 ), ExtResource( 38 ), ExtResource( 37 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 41 ), ExtResource( 39 ), ExtResource( 40 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 144, 96 )

[node name="computer" type="Node2D"]
script = ExtResource( 8 )

[node name="monitor" type="Sprite" parent="."]
position = Vector2( -1.19209e-07, 2.38419e-07 )
scale = Vector2( 1.02491, 1.02674 )
texture = ExtResource( 1 )

[node name="bruh" type="Sprite" parent="."]
position = Vector2( -8.64267e-07, -4 )
scale = Vector2( 0.175, 0.176 )
texture = ExtResource( 15 )

[node name="load_text" type="Label" parent="."]
visible = false
anchor_right = 1.906
anchor_bottom = 0.561
margin_left = -34.6
margin_top = 27.0001
margin_right = 36.4
margin_bottom = 62.0001
custom_fonts/font = ExtResource( 42 )
text = "Shindows
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0.101507, -3.98531 )
scale = Vector2( 0.268773, 0.221911 )
frames = SubResource( 1 )
animation = "New Anim"

[node name="background" type="Sprite" parent="."]
position = Vector2( -1.19209e-06, -4.00001 )
scale = Vector2( 1.02564, 1.04142 )
texture = ExtResource( 5 )

[node name="ProgressBarRad" type="ProgressBar" parent="background"]
visible = false
margin_left = -59.7812
margin_top = -2.98234
margin_right = 60.2188
margin_bottom = 11.0177
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="background/ProgressBarRad"]
margin_left = -48.0
margin_top = -14.0
margin_right = 169.0
margin_bottom = 2.0
custom_fonts/font = ExtResource( 42 )
text = "Virus check"
align = 1

[node name="ProgressBarTest" type="ProgressBar" parent="background"]
visible = false
margin_left = -59.7812
margin_top = -2.98234
margin_right = 60.2188
margin_bottom = 11.0177
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="background/ProgressBarTest"]
margin_left = -48.0
margin_top = -14.0
margin_right = 175.0
margin_bottom = 2.0
custom_fonts/font = ExtResource( 42 )
text = "Testing program"
align = 1

[node name="ProgressBarCheck" type="ProgressBar" parent="background"]
visible = false
margin_left = -59.7812
margin_top = -2.98234
margin_right = 60.2188
margin_bottom = 11.0177
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="background/ProgressBarCheck"]
margin_left = -49.0
margin_top = -14.0
margin_right = 171.0
margin_bottom = 2.0
custom_fonts/font = ExtResource( 42 )
text = "Checking a student"
align = 1

[node name="notify" type="Sprite" parent="background"]
visible = false
position = Vector2( 110.595, 68.5939 )
scale = Vector2( 0.5, 0.369294 )
texture = ExtResource( 9 )

[node name="Node2D" type="Node2D" parent="background"]
visible = false
position = Vector2( -112.11, 13.5281 )
scale = Vector2( 0.839032, 0.837152 )

[node name="Label" type="Label" parent="background/Node2D"]
margin_right = 73.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 42 )
text = "Проверка на вирусы"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="background/Node2D"]
visible = false
margin_top = 83.125
margin_right = 91.0
margin_bottom = 97.125
custom_fonts/font = ExtResource( 42 )
text = "Информация"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="background/Node2D"]
margin_top = 54.625
margin_right = 91.0
margin_bottom = 68.625
custom_fonts/font = ExtResource( 42 )
text = "Проверка студента"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="background/Node2D"]
margin_top = 27.3125
margin_right = 73.0
margin_bottom = 41.3125
custom_fonts/font = ExtResource( 42 )
text = "Тестирование"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list" type="Sprite" parent="background"]
position = Vector2( -123.07, 64.2281 )
scale = Vector2( 0.839032, 0.837152 )
texture = ExtResource( 7 )

[node name="list_b" type="Button" parent="background/list"]
margin_left = -9.5
margin_top = -9.5
margin_right = 9.5
margin_bottom = 10.5
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="radiation" type="Sprite" parent="background"]
position = Vector2( -123.07, 16.5105 )
scale = Vector2( 0.839032, 0.837152 )
texture = ExtResource( 4 )

[node name="rad_b" type="Button" parent="background/radiation"]
margin_left = -9.50002
margin_top = -9.5
margin_right = 9.49998
margin_bottom = 10.5
focus_mode = 0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gear" type="Sprite" parent="background"]
position = Vector2( -123.07, 40.3693 )
scale = Vector2( 0.839032, 0.837152 )
texture = ExtResource( 3 )

[node name="gear_b" type="Button" parent="background/gear"]
margin_left = -9.50002
margin_top = -9.5
margin_right = 9.49998
margin_bottom = 10.5
focus_mode = 0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="book" type="Sprite" parent="background"]
visible = false
position = Vector2( -119.562, 59.6471 )
scale = Vector2( 0.839032, 0.837152 )
texture = ExtResource( 2 )

[node name="book_b" type="Button" parent="background/book"]
margin_left = -9.5
margin_top = -9.5
margin_right = 9.5
margin_bottom = 10.5
focus_mode = 0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shop" type="AnimatedSprite" parent="background"]
visible = false
position = Vector2( -123.07, -7.349 )
scale = Vector2( 0.24122, 0.242969 )
frames = SubResource( 2 )
frame = 1

[node name="shop_b" type="Button" parent="background/shop"]
margin_left = -33.0438
margin_top = -37.1734
margin_right = -14.0438
margin_bottom = -17.1734
rect_scale = Vector2( 3.39169, 3.32665 )
focus_mode = 0
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grayblock" type="Sprite" parent="background"]
visible = false
position = Vector2( 3.98541, 0 )
scale = Vector2( 0.723183, 0.764062 )
texture = ExtResource( 25 )

[node name="next_level" type="Button" parent="background/grayblock"]
margin_top = 29.0
margin_right = 63.0
margin_bottom = 53.0
rect_scale = Vector2( 0.724454, 1 )
focus_mode = 0
custom_fonts/font = ExtResource( 42 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Следующий день"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="repair_reader" type="Button" parent="background/grayblock"]
margin_left = 1.37773
margin_top = -14.312
margin_right = 146.378
margin_bottom = 5.68798
rect_scale = Vector2( 0.775723, 1.02477 )
custom_fonts/font = ExtResource( 42 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.803922, 1, 0, 1 )
disabled = true
text = "Починка ридера 1000p."
clip_text = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="background/grayblock"]
margin_left = -120.0
margin_top = -33.0
margin_right = 69.0
margin_bottom = 61.0
rect_scale = Vector2( 0.6, 1 )
custom_fonts/font = ExtResource( 43 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="note_1" type="Label" parent="background/grayblock"]
margin_left = -120.435
margin_top = -53.437
margin_right = 12.5652
margin_bottom = -37.437
rect_scale = Vector2( 0.834673, 1 )
custom_fonts/font = ExtResource( 42 )
text = "Сводка за день:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="note_2" type="Label" parent="background/grayblock"]
margin_left = 0.940183
margin_top = -53.8284
margin_right = 119.94
margin_bottom = -18.8284
custom_fonts/font = ExtResource( 42 )
text = "Рабочий день 
окончен."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="note_3" type="Label" parent="background/grayblock"]
visible = false
margin_left = -1.43051e-06
margin_top = 11.7098
margin_right = 120.0
margin_bottom = 25.7098
rect_scale = Vector2( 0.724454, 1 )
custom_fonts/font = ExtResource( 42 )
text = "Недостаточно денег"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question" type="Sprite" parent="background"]
position = Vector2( 123.547, -71.5765 )
scale = Vector2( 1.25855, 1.25573 )
texture = ExtResource( 6 )

[node name="que_b" type="Button" parent="background/question"]
margin_left = -9.49999
margin_top = -10.2917
margin_right = 9.50001
margin_bottom = 9.70833
focus_mode = 0
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shop_menu" type="AnimatedSprite" parent="background"]
visible = false
position = Vector2( 3.98541, -1.43051e-06 )
scale = Vector2( 0.141669, 0.113679 )
frames = SubResource( 3 )

[node name="test_ssd" type="AnimatedSprite" parent="background/shop_menu"]
position = Vector2( -484.474, -182.732 )
scale = Vector2( 2.54787, 3.83082 )
frames = SubResource( 4 )

[node name="ssd_b" type="Button" parent="background/shop_menu/test_ssd"]
margin_left = -49.0
margin_top = -18.0
margin_right = 50.0
margin_bottom = 18.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cpu" type="AnimatedSprite" parent="background/shop_menu"]
position = Vector2( -146.092, -181.224 )
scale = Vector2( 2.53187, 3.91235 )
frames = SubResource( 5 )

[node name="cpu_b" type="Button" parent="background/shop_menu/cpu"]
margin_left = -49.0
margin_top = -18.0
margin_right = 50.0
margin_bottom = 18.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="antivirus" type="AnimatedSprite" parent="background/shop_menu"]
position = Vector2( -484.152, 26.2347 )
scale = Vector2( 2.54143, 3.80474 )
frames = SubResource( 6 )

[node name="vir_b" type="Button" parent="background/shop_menu/antivirus"]
margin_left = -49.0
margin_top = -18.0
margin_right = 50.0
margin_bottom = 18.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="internet" type="AnimatedSprite" parent="background/shop_menu"]
position = Vector2( -146.092, 25.8062 )
scale = Vector2( 2.53187, 3.80474 )
frames = SubResource( 7 )

[node name="int_b" type="Button" parent="background/shop_menu/internet"]
margin_left = -49.0
margin_top = -18.0
margin_right = 50.0
margin_bottom = 18.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="more_reader" type="AnimatedSprite" parent="background/shop_menu"]
position = Vector2( -483.675, 244.857 )
scale = Vector2( 2.53187, 3.80474 )
frames = SubResource( 8 )

[node name="read_b" type="Button" parent="background/shop_menu/more_reader"]
margin_left = -49.0
margin_top = -18.0
margin_right = 50.0
margin_bottom = 18.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="background/shop_menu"]
visible = false
margin_left = 35.0
margin_top = 324.0
margin_right = 209.0
margin_bottom = 341.0
rect_scale = Vector2( 2, 5 )
custom_fonts/font = ExtResource( 43 )

[node name="count" type="Label" parent="background/shop_menu"]
margin_left = 98.0
margin_top = -324.0
margin_right = 120.0
margin_bottom = -310.0
rect_scale = Vector2( 3.94486, 4.85774 )
text = "0 p."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="total" type="Label" parent="background/shop_menu"]
margin_left = -70.3296
margin_top = -419.755
margin_right = -46.3296
margin_bottom = -405.755
rect_scale = Vector2( 3.94486, 4.85774 )
text = "0 p."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="Button" parent="background/shop_menu"]
margin_left = 391.993
margin_top = 332.69
margin_right = 463.993
margin_bottom = 354.69
rect_scale = Vector2( 3.25054, 3.44857 )
custom_fonts/font = ExtResource( 42 )
text = "Купить"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="background/shop_menu"]
margin_left = 585.977
margin_top = -428.5
margin_right = 604.977
margin_bottom = -408.5
rect_scale = Vector2( 2.96738, 4.5811 )
custom_colors/font_color = Color( 1, 0.423529, 0.423529, 1 )
text = "x"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="background/shop_menu"]
visible = false
margin_left = 28.1319
margin_top = -244.857
margin_right = 79.1319
margin_bottom = -230.857
rect_scale = Vector2( 7.1287, 10.1108 )
text = "Shoplist:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shoplist" type="Label" parent="background/shop_menu"]
visible = false
margin_left = 28.0
margin_top = -87.0
margin_right = 165.0
margin_bottom = 19.0
rect_scale = Vector2( 4.09451, 3.79836 )
text = "-1
-2
-3
-4
-5
-6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="background"]
visible = false
margin_left = -136.0
margin_top = 13.8999
margin_right = 136.0
margin_bottom = 29.8999
custom_fonts/font = ExtResource( 42 )
text = "Test is done"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="notify_text" type="Label" parent="background"]
visible = false
margin_left = -90.6682
margin_top = -2.98234
margin_right = 117.332
margin_bottom = 11.0177
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 128, 88 )
frames = SubResource( 9 )

[node name="turn_on" type="Button" parent="AnimatedSprite"]
anchor_left = 0.926
anchor_top = 0.979
anchor_right = 0.926
anchor_bottom = 0.979
margin_left = -12.334
margin_top = -8.874
margin_right = 0.666
margin_bottom = 11.126
rect_scale = Vector2( 0.7, 0.3 )
focus_mode = 0
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 10 )
[connection signal="pressed" from="background/list/list_b" to="." method="_on_list_b_pressed"]
[connection signal="pressed" from="background/radiation/rad_b" to="." method="_on_rad_b_pressed"]
[connection signal="pressed" from="background/gear/gear_b" to="." method="_on_gear_b_pressed"]
[connection signal="pressed" from="background/book/book_b" to="." method="_on_book_b_pressed"]
[connection signal="pressed" from="background/shop/shop_b" to="." method="_on_shop_b_pressed"]
[connection signal="pressed" from="background/grayblock/next_level" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="background/grayblock/repair_reader" to="." method="_on_repair_reader_pressed"]
[connection signal="button_down" from="background/question/que_b" to="." method="_on_que_b_button_down"]
[connection signal="button_up" from="background/question/que_b" to="." method="_on_que_b_button_up"]
[connection signal="pressed" from="background/shop_menu/test_ssd/ssd_b" to="." method="_on_ssd_b_pressed"]
[connection signal="pressed" from="background/shop_menu/cpu/cpu_b" to="." method="_on_cpu_b_pressed"]
[connection signal="pressed" from="background/shop_menu/antivirus/vir_b" to="." method="_on_vir_b_pressed"]
[connection signal="pressed" from="background/shop_menu/internet/int_b" to="." method="_on_int_b_pressed"]
[connection signal="pressed" from="background/shop_menu/more_reader/read_b" to="." method="_on_read_b_pressed"]
[connection signal="pressed" from="background/shop_menu/Buy" to="." method="_on_Buy_pressed"]
[connection signal="pressed" from="background/shop_menu/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="AnimatedSprite/turn_on" to="." method="_on_turn_on_pressed"]
